# code-gen

./: .gitignore  Cargo.toml  build.rs  config.tnl  update.bat
lex/: mod.lex
libs/tnl/: .gitignore  Cargo.toml  build.rs  data.lex
libs/tnl/src/: accessor.rs  array.rs  attributes.rs  builder.rs  export.rs  format.rs  from_tnl.rs  lib.rs  object.rs  parser.rs  primitives.rs  string_library.rs
libs/vncint/: Cargo.toml
libs/vncint/src/: cint.rs  compressing.rs  lib.rs
libs/vnlex/: Cargo.toml  main.lex
libs/vnlex/dec2flt/: Cargo.toml
libs/vnlex/dec2flt/src/: decimal.rs  digit.rs  fpu.rs  input.rs  lemire.rs  lib.rs  number.rs  raw_float.rs  slow.rs  table.rs
libs/vnlex/examples/: gen_sb_code.rs
libs/vnlex/src/: cursor.rs  lexer.rs  lib.rs
libs/vnlex/src/syntax_builder/: keyword_literal.rs  mod.rs  node_ins.rs  states.rs  symbol_literal.rs  syntax_desc.rs  syntax_info.rs
libs/vnlex/src/syntaxer/: mod.rs  node.rs  state.rs
libs/vnlex/src/token/: mod.rs  tokenizers.rs
libs/vnutil/: Cargo.toml
libs/vnutil/src/: async_action.rs  growable_stack.rs  io.rs  lib.rs  lock_api.rs  path_finding.rs  thread_pool.rs
libs/vnutil/src/linked_list/: mod.rs  node.rs  shared.rs  unique.rs
libs/vnutil/vnutil-derive/: Cargo.toml
libs/vnutil/vnutil-derive/src/: lib.rs
libs/xlsx-read/: Cargo.toml
libs/xlsx-read/src/: excel_file.rs  excel_table.rs  vnxml.rs
src/: args.rs  config.rs  error.rs  main.rs  parser.rs  preconfig.rs  table.rs  util.rs
src/lex/: cdata.rs  integer.rs  mod.rs
src/table/: fk.rs  global_config.rs  language.rs  mod.rs  template.rs
src/table/template/: base.rs  item.rs  mod.rs
src/types/: custom.rs  enum.rs  integer.rs  list.rs  mod.rs  numbers.rs  sequence.rs  string.rs
