[package]
name = "code-gen"
version = "0.1.0"
edition = "2021"

[build-dependencies]
vnlex = { version = "0.10", path = "../../vnlex" }

[dependencies]
vnlex = { version = "0.10", path = "../../vnlex" }
xlsx-read = { path = "../../xlsx-read" }
tnl = { path = "../../tnl" }
rust_decimal = "1.32.0"
clap = { version = "4.1.8", features = ["derive"] }
# TODO: Delete this after rustc upgraded.
proc-macro2 = "=1.0.79"
ansi_term = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10.0"
dashmap = "6.0.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
