[workspace]
members = [
    "vnutil-derive",
]

[package]
name = "vnutil"
version = "0.2.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

derive = ["dep:vnutil-derive"]

[dependencies]
vncint = { path = "../vncint" }
vnutil-derive = { path = "./vnutil-derive", optional = true }
